// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android InvalidIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
      Object {
        "fontSize": 16,
        "lineHeight": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 6,
        },
        Object {
          "color": "rgb(255, 84, 82)",
        },
      ],
    ]
  }
>
  
</Text>
`;

exports[`Android ValidIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
      Object {
        "fontSize": 16,
        "lineHeight": 16,
      },
      Array [
        Object {
          "position": "absolute",
          "right": 6,
        },
        Object {
          "color": "rgb(0, 215, 117)",
        },
      ],
    ]
  }
>
  
</Text>
`;
